--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/pgte/node-buzzard",
   "browser": "client.js",
-  "dependencies": {},
+  "dependencies": {
+    "boom": "~1.2.1",
+    "xtend": "~2.1.1"
+  },
   "devDependencies": {
     "tap": "~0.4.6"
   }
